# deBruijn

./: Makefile  README.md  deBruijn.cabal  package.yaml
app/: Main.hs
sources/: Main.hs
